<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="bottom_nav_menu_dashboard">Home</string>
    <string name="bottom_nav_menu_settings">Profile</string>
    <string name="bottom_nav_menu_history">History</string>
    <string name="home_tab_title_text">Ip Information</string>
    <string name="home_tab_ip_latitude_label_text">Latitude :</string>
    <string name="home_tab_ip_longitude_label_text">Longitude :</string>
    <string name="home_tab_ip_continent_label_text">Continent :</string>
    <string name="home_tab_ip_country_label_text">Country :</string>
    <string name="home_tab_ip_city_label_text">City :</string>
    <string name="home_tab_ip_isp_label_text">ISP :</string>
    <string name="bottom_nav_menu_query">Query</string>
    <string name="search_btn_text">Search</string>
</resources>