<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_menu"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/bottom_nav_menu_dashboard" />

    <item
        android:id="@+id/query_menu"
        android:enabled="true"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/bottom_nav_menu_query" />

    <item
        android:id="@+id/history_menu"
        android:enabled="true"
        android:icon="@drawable/baseline_history_24"
        android:title="@string/bottom_nav_menu_history" />
    <item
        android:id="@+id/profile_menu"
        android:enabled="true"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/bottom_nav_menu_settings" />
</menu>